--- a/css/Hanoi.css
+++ b/css/Hanoi.css
@@ -71,6 +71,10 @@
     width: 20%;
 }
 
+.col-n1 {
+    width: 95%;
+}
+
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     [class*="col-"] {
@@ -93,11 +97,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
     background: #fff;
-    z-index: 2;
+    transition: 1s;
 }
 
 .header .wrap {
@@ -112,23 +113,22 @@
     height: 40px;
 }
 
-.header .wrap .search {
+.header .wrap .search01 {
     height: 50px;
 }
 
-.header .wrap .search * {
+.header .wrap .search01 * {
     float: left;
-    text-align: center;
 }
 
-.header .wrap .search a {
+.header .wrap .search01 a {
     text-decoration: none;
     font-size: 17px;
     color: #333;
     padding: 5px;
 }
 
-.header .wrap .search i {
+.header .wrap .search01 i {
     margin: 5px;
     font-size: 17px;
     color: #333;
@@ -136,10 +136,113 @@
     line-height: 0.8;
 }
 
+.header .wrap .search01 .uncag .sub {
+    list-style-type: none;
+}
+
+.header .wrap .search01 .uncag {
+    position: absolute;
+}
+
+.header .wrap .search01 .switch {
+    display: flex;
+    margin: 0;
+}
+
+#header-search {
+    width: 118px;
+}
+
+.header .wrap .search01 input {
+    text-decoration: none;
+    font-size: 17px;
+    color: #333;
+    padding: 5px;
+    border: 0;
+    width: 70%;
+    outline: 0;
+}
+
+.header .wrap .search01 .switch i {
+    margin: 5px;
+    font-size: 17px;
+    color: #333;
+    padding: 5px;
+    line-height: 0.8;
+}
+
+.header .wrap .search01 a:hover {
+    color: grey;
+}
+
+.header .wrap .search01 i:hover {
+    color: aqua
+}
+
+.header .wrap .search01 .slide {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.header .wrap .search01 .uncag {
+    opacity: 1;
+    visibility: visible;
+    display: block;
+}
+
+.disappear {
+    animation: disappear 1s;
+}
+
+@keyframes disappear {
+    from {
+        transform: translateY(0%);
+    }
+    to {
+        transform: translateY(70%);
+    }
+}
+
+.show-up {
+    animation: show-up 1s;
+}
+
+@keyframes show-up {
+    from {
+        transform: translateY(-70%);
+    }
+    to {
+        transform: translateY(0%);
+    }
+}
+
+.disappear02 {
+    animation: disappear02 1s;
+}
+
+@keyframes disappear02 {
+    from {
+        transform: translateY(0%);
+    }
+    to {
+        transform: translateY(-70%);
+    }
+}
+
+.show-up02 {
+    animation: show-up02 1s;
+}
+
+@keyframes show-up02 {
+    from {
+        transform: translateY(70%);
+    }
+    to {
+        transform: translateY(0%);
+    }
+}
+
 .wraper {
-    position: relative;
-    z-index: 1;
-    top: 92px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -151,6 +254,60 @@
     padding: 0px;
 }
 
+.wraper .contanier .content .table {
+    padding-bottom: 50px;
+}
+
+.wraper .contanier .content .table .menu {
+    width: 50%;
+    background-color: aqua;
+    margin-left: 50px;
+}
+
+.wraper .contanier .content .table .menu .menu-inner {
+    margin: 10px;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-title {
+    display: flex;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-title .show-hide {
+    padding-left: 20px;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-title .show-hide p {
+    position: absolute;
+    color: red;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-title .show-hide p::before {
+    content: "[ ";
+    color: #000;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-title .show-hide p::after {
+    content: " ]";
+    color: #000;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-title .show-hide .hide-menu {
+    display: none;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-list {
+    display: none;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-list li {
+    list-style-type: none;
+    padding: 5px;
+}
+
+.wraper .contanier .content .table .menu .menu-inner .menu-list .menu-list-inner {
+    padding-left: 10px;
+}
+
 .wraper .contanier .content .p1 {
     margin: 10px;
     padding: 0px 12px;
@@ -158,6 +315,23 @@
     line-height: 1;
     font-size: 20px;
     width: 90%;
+}
+
+.wraper .contanier .content .p1.txt {
+    margin-bottom: 0;
+}
+
+.wraper .contanier .content .p1.txt .list {
+    padding-left: 30px;
+}
+
+.wraper .contanier .content .p1.txt h2 {
+    padding: 2px;
+}
+
+.wraper .contanier .content .p1.txt h2.txt-inner {
+    font-size: 21px;
+    padding-left: 5px;
 }
 
 .wraper .contanier .content .p1 h2 {
@@ -182,7 +356,9 @@
 .wraper .contanier .content .p1 p {
     font-size: 15px;
     color: rgb(88, 88, 88);
+    line-height: normal;
     padding: 10px 5px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .wraper .contanier .content .p1 .image img {
@@ -198,7 +374,7 @@
 }
 
 .wraper .contanier .nav .search {
-    height: 6vh;
+    height: 5vh;
     border: 1px solid rgb(187, 186, 186);
     padding: 0;
     border-radius: 2px;
@@ -217,6 +393,7 @@
 
 .wraper .contanier .nav .search button {
     width: 30%;
+    overflow: hidden;
     border: none;
     outline: none;
     color: #333;
@@ -250,24 +427,93 @@
     color: aquamarine;
 }
 
-.wraper .contanier .content .other {
-    margin: 0 10px;
-    padding: 10px 12px;
+.wraper .contanier .content .submit {
+    margin-top: 50px;
+    padding: 10px;
+    background-color: burlywood;
+    margin-bottom: 20px;
 }
 
-.wraper .contanier .content .other a {
+.wraper .contanier .content .submit .submit-title p {
+    color: #666;
+}
+
+.wraper .contanier .content .submit form {
+    margin: 5px;
+    margin-top: 10px;
+}
+
+.wraper .contanier .content .submit .form .submit-text textarea::placeholder {
+    padding-top: 5px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: larger;
+}
+
+.wraper .contanier .content .submit .form .submit-text input::placeholder {
+    padding-top: 5px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: larger;
+}
+
+.wraper .contanier .content .submit form .submit-text {
+    padding-bottom: 15px;
+}
+
+.wraper .contanier .content .submit form .submit-text textarea {
+    outline: 0;
+    border: 0;
+    width: 85%;
+    height: 10vh;
+}
+
+.wraper .contanier .content .submit form .submit-text input {
+    outline: 0;
+    border: 0;
+    height: 35px;
+    width: 60%;
+}
+
+.wraper .contanier .content .submit form .submit-text div {
+    padding: 5px;
+}
+
+.wraper .contanier .content .submit form .submit-checkbox {
+    padding-bottom: 10px;
+}
+
+.wraper .contanier .content .submit form .submit-button {
+    float: right;
+}
+
+.btn {
+    background: transparent;
+    width: 200px;
+    padding: 15px;
+    color: red;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-weight: 600;
+    border: 2px solid black;
     text-decoration: none;
-    color: rgb(46, 163, 242);
 }
 
-.wraper .contanier .content .other a::before {
-    content: "<<";
-    color: rgb(46, 163, 242);
+.btn:hover {
+    background-color: white;
+}
+
+@media only screen and (max-width: 1024px) {
+    .submit-button {
+        margin-right: 20vh;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .submit-button {
+        margin-right: 0vh;
+    }
 }
 
 .footer {
-    position: relative;
-    top: 92px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -327,4 +573,10 @@ ul.main-menu li a {
 
 .footer .rightF .li02:hover {
     color: red;
+}
+
+.active {
+    position: fixed;
+    top: 0;
+    height: 70px;
 }
