--- a/css/HCM.css
+++ b/css/HCM.css
@@ -363,7 +363,7 @@
 
 .wraper .contanier .content .p1 .image img {
     width: 100%;
-    height: 40vh;
+    
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -438,7 +438,7 @@
     color: #666;
 }
 
-.wraper .contanier .content .submit form {
+.wraper .contanier .content .submit .form {
     margin: 5px;
     margin-top: 10px;
 }
@@ -455,33 +455,33 @@
     font-size: larger;
 }
 
-.wraper .contanier .content .submit form .submit-text {
+.wraper .contanier .content .submit .form .submit-text {
     padding-bottom: 15px;
 }
 
-.wraper .contanier .content .submit form .submit-text textarea {
+.wraper .contanier .content .submit .form .submit-text textarea {
     outline: 0;
     border: 0;
     width: 85%;
     height: 10vh;
 }
 
-.wraper .contanier .content .submit form .submit-text input {
+.wraper .contanier .content .submit .form .submit-text input {
     outline: 0;
     border: 0;
     height: 35px;
     width: 60%;
 }
 
-.wraper .contanier .content .submit form .submit-text div {
+.wraper .contanier .content .submit .form .submit-text div {
     padding: 5px;
 }
 
-.wraper .contanier .content .submit form .submit-checkbox {
+.wraper .contanier .content .submit .form .submit-checkbox {
     padding-bottom: 10px;
 }
 
-.wraper .contanier .content .submit form .submit-button {
+.wraper .contanier .content .submit .form .submit-button {
     float: right;
 }
 
